fix: refine UI and remove double scroll

--- a/css/base.css
+++ b/css/base.css
@@ -17,6 +17,7 @@ body {
   background-color: var(--color-black);
   color: var(--color-white);
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 a {
